Bug 867682 - Fix the alignment in the menu panel. r=mconley
UltraBlame original commit: 76e859637e4282b6a75499250ff6b2d66954c665

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -290,10 +290,38 @@ size
 10px
 ;
 }
+.
+PanelUI
+-
+pageControls
+{
+padding
+:
+1em
+0
+0
+;
+}
+.
+PanelUI
+-
+footer
+.
+PanelUI
+-
+editControls
+.
+PanelUI
+-
+zoomControls
 #
 PanelUI
 -
 contents
+.
+PanelUI
+-
+footer
 #
 customizationui
 -
@@ -309,7 +337,8 @@ menuPanelWidth
 ;
 padding
 :
-0
+.
+5em
 1em
 ;
 }
@@ -687,12 +716,6 @@ start
 :
 8px
 ;
-font
--
-size
-:
-12px
-;
 display
 :
 -
@@ -722,7 +745,12 @@ font
 -
 size
 :
-10px
+calc
+(
+5em
+/
+6
+)
 ;
 color
 :
@@ -762,25 +790,25 @@ min
 -
 width
 :
-24px
+2em
 ;
 max
 -
 width
 :
-24px
+2em
 ;
 min
 -
 height
 :
-24px
+2em
 ;
 max
 -
 height
 :
-24px
+2em
 ;
 }
 #
@@ -798,6 +826,46 @@ grid
 display
 :
 block
+;
+}
+.
+PanelUI
+-
+pageControls
+toolbarbutton
+{
+min
+-
+width
+:
+7em
+;
+max
+-
+width
+:
+7em
+;
+}
+.
+PanelUI
+-
+pageControls
+toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
+{
+-
+moz
+-
+margin
+-
+end
+:
+0
 ;
 }
 #
@@ -826,25 +894,25 @@ min
 -
 width
 :
-72px
+7em
 ;
 max
 -
 width
 :
-72px
+7em
 ;
 min
 -
 height
 :
-72px
+6em
 ;
 max
 -
 height
 :
-72px
+6em
 ;
 }
 #
@@ -868,55 +936,54 @@ min
 -
 width
 :
-32px
+calc
+(
+8em
+/
+3
+)
 ;
 max
 -
 width
 :
-32px
+calc
+(
+8em
+/
+3
+)
 ;
 min
 -
 height
 :
-32px
+calc
+(
+8em
+/
+3
+)
 ;
 max
 -
 height
 :
-32px
+calc
+(
+8em
+/
+3
+)
 ;
 margin
 :
-5px
-;
-}
-.
-PanelUI
--
-pageControls
-{
-padding
-:
-12px
-20px
-;
-}
-.
-PanelUI
--
-editControls
-.
-PanelUI
--
-zoomControls
-{
-padding
-:
-6px
-0
+calc
+(
+5em
+/
+12
+)
 ;
 }
 .
@@ -1000,11 +1067,6 @@ PanelUI
 -
 footer
 {
-padding
-:
-9px
-12px
-;
 background
 -
 color
